--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,3 +1,13 @@
 <html>
+<head>
   <title>To-do Lists></title>
+</head>
+<body>
+    <h1>Start a new To-do list</h1>
+    <input id="id_new_item" placeholder="Enter to-do item here."/>
+    <table id="id_list_table">
+        <tr><td>1: Buy peacock feathers</td></tr>
+        <tr><td>2: Use peacock feathers to make a fly</td></tr>
+    </table>
+</body>
 </html>
